--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -53,6 +53,23 @@
             "windows": {
                 "command": "${env:USERPROFILE}/.pico-sdk/openocd/0.12.0+dev/openocd.exe",
             }
+        },
+        {
+            "label": "Clean Rebuild and Copy UF2 to BOOTSEL",
+            "type": "shell",
+            "command": "rm -rf build && mkdir build && cmake -S . -B build && cmake --build build && ~/mount_rpi.sh && cp build/Wireless_Latency_Meter.uf2 /mnt/rpi-rp2/",
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated"
+            },
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
