--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ pico_sdk_init()
 
 add_executable(WiFi_Latency_Meter 
         src/main.c
+        src/sensors.c
 )
 
 pico_set_program_name(WiFi_Latency_Meter "WiFi_Latency_Meter")
@@ -48,7 +49,8 @@ pico_enable_stdio_usb(WiFi_Latency_Meter 1)
 
 # Add the standard library to the build
 target_link_libraries(WiFi_Latency_Meter
-        pico_stdlib)
+        pico_stdlib
+        hardware_adc)
 
 # Add the standard include files to the build
 target_include_directories(WiFi_Latency_Meter PRIVATE
