Create wifi and wifi initialization in `src/main.c`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_executable(WiFi_Latency_Meter
         src/main.c
         src/sensors.c
         src/ping.c
+        src/wifi.c
 )
 
 pico_set_program_name(WiFi_Latency_Meter "WiFi_Latency_Meter")
