Create `influxdb.c/.h` and update `include/config.h`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,8 @@
         "stdbool.h": "c",
         "cstring": "c",
         "variant": "c",
-        "functional": "c"
+        "functional": "c",
+        "ip_addr.h": "c",
+        "format": "c"
     }
 }
