Added better LwIP handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,7 +51,9 @@
         "variant": "c",
         "functional": "c",
         "ip_addr.h": "c",
-        "format": "c"
+        "format": "c",
+        "influxdb.h": "c",
+        "config.h": "c"
     },
     "C_Cpp.default.compilerPath": "/opt/st/stm32cubeclt_1.18.0/GNU-tools-for-STM32/bin/arm-none-eabi-gcc"
 }
